[metadata]
name = house_gen
version = 0.0.1
description = Description
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = MIT
classifiers =
    # Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas==1.4.2
    openpyxl==3.0.10


[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    house_gen = house_gen:main

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
where=src